[FIX] text overflow: slider controlles hint on small devices

--- a/Resources/Public/Css/src/layout.css
+++ b/Resources/Public/Css/src/layout.css
@@ -25,6 +25,7 @@
         height: auto;
         position: relative;
         text-align: center;
+        white-space: normal;
         width: auto;
     }
 
